--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -14,4 +14,19 @@ canvas {
   background-color: rgba(0,0,0,0.0);
 }
 
+.login {
+  margin: 200px auto;
+  padding: 10px;
+  width: 100px;
+}
+
+.label {
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+input {
+  height: 40px;
+  width: 200px;
+}
 
