--- a/server/views/index.html
+++ b/server/views/index.html
@@ -7,19 +7,15 @@
   <!-- <meta http-equiv="refresh" content="5"> -->
 </head>
 <body style="background-color: rgba(0,0,0,0.0)">
-  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-  <script type="importmap">
-    {
-      "imports": {
-        "three": "https://unpkg.com/three@0.149.0/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three@0.149.0/examples/jsm/",
-        "tween": "https://cdn.jsdelivr.net/npm/@tweenjs/tween.js/dist/tween.esm.js",
-        "scryfall-api": "https://cdn.jsdelivr.net/npm/scryfall-api@3.2.4/+esm"
-      }
-    }
-  </script>
 
-  <script type="module" src="javascripts/animator.js"></script>
-
+	<div class="login">
+		<form action="/login" method="post">
+			<div class="label">Username</div>
+			<input type="text" name="username" placeholder="Username" required><br><br>
+			<div class="label">Password</div>
+			<input type="password" name="password" placeholder="Password" required><br><br>
+			<input type="submit" value="login">
+		</form>
+	</div>
 </body>
 </html>
